# codecrafters-interpreter-ocaml

./: .gitignore  README.md  codecrafters_interpreter.opam  dune  dune-project  main.ml
lib/: ast.ml  dune  environment.ml  environment.mli  interpreter.ml  interpreter.mli  parser.mly  run.ml  run.mli  scanner.ml  scanner.mli  util.ml  value.ml
src/: main.ml  scanner.ml  scanner.mli  token.ml  token_type.ml
